--- a/package.json
+++ b/package.json
@@ -58,11 +58,13 @@
     "@adonisjs/shield": "^8.2.0",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
+    "@tailwindcss/vite": "^4.1.8",
     "@vinejs/vine": "^3.0.1",
     "better-sqlite3": "^11.10.0",
     "edge.js": "^6.2.1",
     "luxon": "^3.6.1",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "tailwindcss": "^4.1.8"
   },
   "hotHook": {
     "boundaries": [
